--- a/WunderGround/WunderGround.csproj
+++ b/WunderGround/WunderGround.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5E95EA9-09E6-4337-99E4-879BE3922115}</ProjectGuid>
+    <ProjectGuid>{4D6D17DF-3516-4393-9E57-4566841C5807}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SpectreWeather.PublicModel</RootNamespace>
-    <AssemblyName>SpectreWeather.PublicModel</AssemblyName>
+    <RootNamespace>SpectreWeather.ForecastSource.WunderGround</RootNamespace>
+    <AssemblyName>SpectreWeather.ForecastSource.WunderGround</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,9 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Fahrenheit.cs" />
-    <Compile Include="IForecast.cs" />
+    <Compile Include="ForecastSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SpectreWeather.PublicModel\SpectreWeather.PublicModel.csproj">
+      <Project>{f5e95ea9-09e6-4337-99e4-879be3922115}</Project>
+      <Name>SpectreWeather.PublicModel</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
