--- a/SpectreWeather.Factory.Spec/SpectreWeather.Factory.Spec.csproj
+++ b/SpectreWeather.Factory.Spec/SpectreWeather.Factory.Spec.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDB1E002-64A3-4F3A-9517-9F4427C61C74}</ProjectGuid>
+    <ProjectGuid>{30BBDDA8-A50C-4452-95B8-D87C91E45EC7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SpectreWeather.ForecastSource.WunderGround.Spec</RootNamespace>
-    <AssemblyName>SpectreWeather.ForecastSource.WunderGround.Spec</AssemblyName>
+    <RootNamespace>SpectreWeather.Factory.Spec</RootNamespace>
+    <AssemblyName>SpectreWeather.Factory.Spec</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -38,42 +38,30 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.4.2.0\lib\net45\Castle.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.1.18\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.1.18\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Moq, Version=4.7.137.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <HintPath>..\packages\Moq.4.7.137\lib\net45\Moq.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetClientSpec.cs" />
-    <Compile Include="GetForecastSpec.cs" />
+    <Compile Include="DefaultSpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SpectreWeather.PublicModel.Spec\SpectreWeather.PublicModel.Spec.csproj">
-      <Project>{89e11f93-f05f-4cd0-8b22-b56cb15c2bd6}</Project>
-      <Name>SpectreWeather.PublicModel.Spec</Name>
+    <ProjectReference Include="..\SpectreWeather.Factory\SpectreWeather.Factory.csproj">
+      <Project>{45fe825c-b224-4aa3-aadd-9658a18016fa}</Project>
+      <Name>SpectreWeather.Factory</Name>
     </ProjectReference>
     <ProjectReference Include="..\SpectreWeather.PublicModel\SpectreWeather.PublicModel.csproj">
-      <Project>{f5e95ea9-09e6-4337-99e4-879be3922115}</Project>
+      <Project>{F5E95EA9-09E6-4337-99E4-879BE3922115}</Project>
       <Name>SpectreWeather.PublicModel</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WunderGround\WunderGround.csproj">
-      <Project>{4d6d17df-3516-4393-9e57-4566841c5807}</Project>
-      <Name>WunderGround</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
