--- a/SpectreWeather.PublicModel/SpectreWeather.PublicModel.csproj
+++ b/SpectreWeather.PublicModel/SpectreWeather.PublicModel.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Coordinates.cs" />
     <Compile Include="Fahrenheit.cs" />
     <Compile Include="IForecast.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
