--- a/SpectreWeather.PublicModel/SpectreWeather.PublicModel.csproj
+++ b/SpectreWeather.PublicModel/SpectreWeather.PublicModel.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Fahrenheit.cs" />
     <Compile Include="ICurrentConditions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CurrentConditions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
