--- a/SpectreWeather.PublicModel/SpectreWeather.PublicModel.csproj
+++ b/SpectreWeather.PublicModel/SpectreWeather.PublicModel.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coordinates.cs" />
-    <Compile Include="Fahrenheit.cs" />
+    <Compile Include="Kelvin.cs" />
     <Compile Include="ICurrentConditions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CurrentConditions.cs" />
