Added Average Forecast asggregation.

--- a/SpectreWeather.Api.Spec/SpectreWeather.Api.Spec.csproj
+++ b/SpectreWeather.Api.Spec/SpectreWeather.Api.Spec.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AggregateSpec.cs" />
     <Compile Include="Asserts.cs" />
     <Compile Include="Fixtures\Unique.cs" />
     <Compile Include="Mocks\GetForecastMock.cs" />
