--- a/SpectreWeather.Api/SpectreWeather.Api.csproj
+++ b/SpectreWeather.Api/SpectreWeather.Api.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggregate.cs" />
     <Compile Include="ForecastApi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
